# lfs_port

./: CMakeLists.txt  README.md  main.c  mklfs.c
lfs/: CMakeLists.txt
lfs_port/: CMakeLists.txt
lfs_port/include/lfs_port/: lfs_port.h  lfs_port_linux.h
lfs_port/src/: lfs_port_linux.c
